@@ -1,4 +1,5 @@
 2.1.14
+ * Fix potential deadlock when parent process is terminating child processes (CASSANDRA-11505)
  * Checking if an unlogged batch is local is inefficient (CASSANDRA-11529)
  * Fix paging for COMPACT tables without clustering columns (CASSANDRA-11467)
  * Fix out-of-space error treatment in memtable flushing (CASSANDRA-11448)
